# rl_snake

./: .gitignore  CLAUDE.md  README.md  live_play.py  main.py  package-lock.json  play.py  pyproject.toml  resume_train.py  snake_env.py  train.py
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
logs/ppo_20251128_194333/PPO_1/: events.out.tfevents.1764387815.zeds-mac.41561.0
logs/ppo_20251128_194343/: evaluations.npz
logs/ppo_20251128_194343/PPO_1/: events.out.tfevents.1764387825.zeds-mac.41791.0
