[project]
name = "rl-snake"
version = "0.1.0"
description = "Reinforcement learning Snake game with DQN and PPO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.3.0",
    "pygame>=2.5.0",
    "numpy>=1.26.0",
    "torch>=2.0.0",
    "tensorboard>=2.15.0",
    "tqdm>=4.67.1",
    "rich>=14.2.0",
    # Screen capture and control
    "mss>=9.0.0",
    "pyautogui>=0.9.54",
    "opencv-python>=4.9.0",
    "pillow>=10.0.0",
]

[project.scripts]
train = "train:main"
play = "play:main"
